src/tests/code/pass/pass_function_void_return.u
func1:(v:i64){}->()
func2:(v:i64)->()
func3:(v:i64){}
func4:(v:i64)

entrypoint:~()
{
	func1();
	func2();
	func3();
	func4();
}
->(i64{77})