src/tests/code/fail/fail_missing_function_identifier.u
:(v:i64)->(ret:i64{1})
